# maja

app/: Dockerfile  Makefile  db.sqlite3  nginx.default  pyproject.toml  requirements.txt
app/creators/: models.py  serializers.py  views.py
app/creators/migrations/: 0001_initial.py  0002_alter_creator_bio_alter_creator_created_at_and_more.py
app/maja/: asgi.py  settings.py  urls.py  wsgi.py
app/nft/: admin.py  models.py  serializers.py  views.py
app/nft/migrations/: 0001_initial.py  0002_alter_nft_description.py
app/users/: admin.py  authentication.py  models.py  serializers.py  urls.py  views.py
app/users/migrations/: 0001_initial.py
infra/test/: maja.test.ts
lib/: maja-stack.ts
